# iptv-sniffer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: presubmit.yml
config/: multicast_presets.json
docs/: Design.md  development-plan.md
docs/adr/: 0006-docker-multi-stage-build.md
docs/prompts/: README.md  task-1.1-channel-data-model.md  task-1.2-configuration-management.md  task-1.3-json-storage-repository.md  task-1.4-cli-structure-with-typer.md  task-2.1-ffmpeg-availability-check.md  task-2.2-http-stream-validator.md  task-2.3-screenshot-capture.md  task-3.1-strategy-pattern-base.md  task-3.2-template-scan-strategy.md  task-3.3-rate-limiter.md  task-3.4-scan-orchestrator.md  task-4.1-m3u-parser.md  task-4.2-character-encoding-detection.md  task-4.3-m3u-generator.md  task-5.1-multicast-scan-strategy.md  task-5.2-smart-port-scanner.md  task-5.3-scan-preset-system.md  task-6.1-fastapi-setup.md  task-6.2-scan-endpoints.md  task-7.0-vue-vite-frontend-setup.md  task-7.1-vue-router-tab-navigation.md  task-7.2-vue-stream-test-page.md  task-7.3-vue-screenshot-display.md  task-7.4-vue-channel-management.md  task-7.5-vue-m3u-import-export.md  task-7.6-vue-group-management.md  task-8.1-docker-multi-stage-build.md
frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
iptv_sniffer/: __init__.py
scripts/: docker-build.sh  docker-run.sh
tests/: __init__.py
(+109 files in other folders)
