[project]
name = "iptv-sniffer"
version = "0.1.0"
description = "A lightweight tool to sniff available IPTV channels on your network, with M3U import, export, and management support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyrefly>=0.39.3",
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
    "pytest-testmon>=2.1.3",
    "ruff>=0.14.2",
]
